# hw-web13

./: Test_CRUD_contacts.py  config.py  conftest.py  main.py  pyproject.toml  pytest_db.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 543ad1a4f17a_init.py
src/: auth.py  auth_services.py  roles.py  schemas.py  send_email.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
