[tool.poetry]
name = "hw-web11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
pycryptodome = "^3.20.0"
python-jose = "^3.3.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
mail = "^2.1.0"
redis = "^5.0.6"
cloudinary = "^1.40.0"
fastapi-limiter = "^0.1.6"
aioredis = "^2.0.1"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
